--- a/animationsGif/animationsGif/Base.lproj/Main.storyboard
+++ b/animationsGif/animationsGif/Base.lproj/Main.storyboard
@@ -370,6 +370,8 @@
                         <color key="backgroundColor" red="0.9971558452" green="0.97724920510000002" blue="0.47179394959999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
                     <connections>
+                        <outlet property="backBtn" destination="myl-3H-vbh" id="b0s-cv-Qee"/>
+                        <outlet property="nextBtn" destination="gCd-T5-vhh" id="Zic-ha-hiI"/>
                         <outlet property="tableView" destination="bfq-dS-1TP" id="1PO-b4-hfO"/>
                         <outlet property="tableViewLabelAnimation" destination="kUc-xi-NxG" id="0SJ-4E-aoO"/>
                     </connections>
@@ -377,7 +379,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="a3t-cm-nsj" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="pOu-e7-m4d" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="3320.8000000000002" y="138.98050974512745"/>
+            <point key="canvasLocation" x="3174" y="139"/>
         </scene>
         <!--Six View Controller-->
         <scene sceneID="A4F-j0-oVA">
