--- a/animationsGif/animationsGif/Base.lproj/Main.storyboard
+++ b/animationsGif/animationsGif/Base.lproj/Main.storyboard
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12118" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12086"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -441,9 +442,12 @@
                                     <constraint firstAttribute="width" constant="273" id="pxV-cz-gbu"/>
                                 </constraints>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ILU-uL-GEm">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ILU-uL-GEm">
                                 <rect key="frame" x="16" y="20" width="46" height="46"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="46" id="RJ1-5i-cGj"/>
+                                    <constraint firstAttribute="height" constant="46" id="oyJ-VK-Lia"/>
+                                </constraints>
                                 <state key="normal" title="Back">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -451,15 +455,32 @@
                                     <segue destination="hL1-Wz-3vD" kind="unwind" unwindAction="unwdinToSix:" id="7H4-n3-qEn"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wKu-zL-N1Y">
+                                <rect key="frame" x="313" y="20" width="46" height="46"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="46" id="E6d-1A-VC9"/>
+                                    <constraint firstAttribute="height" constant="46" id="U0o-Cg-wLx"/>
+                                </constraints>
+                                <state key="normal" title="Next">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <segue destination="sVc-zi-GOX" kind="modal" id="3R0-Py-duG"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="pBA-Jk-sbU" firstAttribute="top" secondItem="epX-dd-S0R" secondAttribute="bottom" id="1pU-zF-U5s"/>
                             <constraint firstItem="slL-QR-iB7" firstAttribute="top" secondItem="epX-dd-S0R" secondAttribute="bottom" constant="-274" id="6X4-NW-yeN"/>
+                            <constraint firstItem="ILU-uL-GEm" firstAttribute="top" secondItem="HYF-k9-xKy" secondAttribute="bottom" id="Cfo-yK-1uQ"/>
+                            <constraint firstItem="ILU-uL-GEm" firstAttribute="leading" secondItem="eGo-Wi-JGl" secondAttribute="leadingMargin" id="LUl-UY-9SA"/>
+                            <constraint firstItem="wKu-zL-N1Y" firstAttribute="trailing" secondItem="eGo-Wi-JGl" secondAttribute="trailingMargin" id="Smf-te-Bcu"/>
                             <constraint firstAttribute="trailing" secondItem="epX-dd-S0R" secondAttribute="trailing" id="UOg-5Z-vgF"/>
                             <constraint firstItem="epX-dd-S0R" firstAttribute="top" secondItem="eGo-Wi-JGl" secondAttribute="top" id="cjM-j4-yRw"/>
                             <constraint firstItem="epX-dd-S0R" firstAttribute="leading" secondItem="eGo-Wi-JGl" secondAttribute="leading" id="d3S-Bj-pnb"/>
                             <constraint firstItem="slL-QR-iB7" firstAttribute="leading" secondItem="epX-dd-S0R" secondAttribute="trailing" constant="-324" id="gHQ-Kk-4vI"/>
+                            <constraint firstItem="wKu-zL-N1Y" firstAttribute="top" secondItem="HYF-k9-xKy" secondAttribute="bottom" id="gS8-AH-GHm"/>
                         </constraints>
                     </view>
                     <connections>
@@ -472,6 +493,101 @@
                 <exit id="hL1-Wz-3vD" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="5013.6000000000004" y="123.68815592203899"/>
+        </scene>
+        <!--Ocho View Controller-->
+        <scene sceneID="XaE-7S-Jwb">
+            <objects>
+                <viewController id="sVc-zi-GOX" customClass="OchoViewController" customModule="animationsGif" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="teh-GE-2tN"/>
+                        <viewControllerLayoutGuide type="bottom" id="bW4-pF-Qm3"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="ej1-7t-mqq">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Y3gTzi" translatesAutoresizingMaskIntoConstraints="NO" id="kQm-d6-J9L">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            </imageView>
+                            <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sU4-gu-Luy" userLabel="menuView">
+                                <rect key="frame" x="0.0" y="606" width="375" height="118"/>
+                                <subviews>
+                                    <view alpha="0.25" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="XQl-3X-GOx">
+                                        <rect key="frame" x="165" y="8" width="44" height="44"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <color key="backgroundColor" red="0.38562817259999999" green="0.38562817259999999" blue="0.38562817259999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    </view>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GUx-KM-4Qb">
+                                        <rect key="frame" x="165" y="8" width="44" height="44"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <state key="normal" image="icons8-expand_arrow_filled">
+                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="toggleMenu:" destination="sVc-zi-GOX" eventType="touchUpInside" id="vdJ-C0-7iA"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JgG-VL-wbr">
+                                        <rect key="frame" x="69" y="58" width="50" height="50"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        <state key="normal" title="A" image="Mazinger_Z-1"/>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dNl-t0-iQ1">
+                                        <rect key="frame" x="157" y="61" width="60" height="44"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        <state key="normal" title="A" image="MarioHead"/>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ocp-ZW-4qo">
+                                        <rect key="frame" x="241" y="58" width="65" height="60"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        <state key="normal" title="A" image="R2D2-icon"/>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="118" id="k5q-UG-0oX"/>
+                                </constraints>
+                            </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GLm-fx-CVl">
+                                <rect key="frame" x="16" y="20" width="46" height="46"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="46" id="3qL-xV-qvY"/>
+                                    <constraint firstAttribute="width" constant="46" id="qSC-XN-gNt"/>
+                                </constraints>
+                                <state key="normal" title="Back">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <segue destination="XRF-n6-ocx" kind="unwind" unwindAction="unwindToSeven:" id="CNV-7q-Dhg"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="kQm-d6-J9L" firstAttribute="top" secondItem="ej1-7t-mqq" secondAttribute="top" id="7zH-1f-QQQ"/>
+                            <constraint firstItem="kQm-d6-J9L" firstAttribute="leading" secondItem="ej1-7t-mqq" secondAttribute="leading" id="ExG-2M-QnG"/>
+                            <constraint firstItem="sU4-gu-Luy" firstAttribute="leading" secondItem="ej1-7t-mqq" secondAttribute="leading" id="Nn4-CY-L4k"/>
+                            <constraint firstAttribute="trailing" secondItem="sU4-gu-Luy" secondAttribute="trailing" id="WcT-Ys-867"/>
+                            <constraint firstItem="bW4-pF-Qm3" firstAttribute="top" secondItem="kQm-d6-J9L" secondAttribute="bottom" id="XTC-S2-jAY"/>
+                            <constraint firstAttribute="trailing" secondItem="kQm-d6-J9L" secondAttribute="trailing" id="fbh-9F-n9s"/>
+                            <constraint firstItem="GLm-fx-CVl" firstAttribute="leading" secondItem="ej1-7t-mqq" secondAttribute="leadingMargin" id="nFc-NR-Okx"/>
+                            <constraint firstItem="GLm-fx-CVl" firstAttribute="top" secondItem="teh-GE-2tN" secondAttribute="bottom" id="nQ4-ym-h50"/>
+                            <constraint firstAttribute="bottom" secondItem="sU4-gu-Luy" secondAttribute="bottom" constant="-57" id="v1t-og-4Kj"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="buttonView" destination="XQl-3X-GOx" id="gLl-LC-Kkt"/>
+                        <outlet property="menuBtn" destination="GUx-KM-4Qb" id="939-7i-hZD"/>
+                        <outlet property="menuView" destination="sU4-gu-Luy" id="pWq-Fl-9A5"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="jMN-Cg-3Sb" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="XRF-n6-ocx" userLabel="Exit" sceneMemberID="exit"/>
+            </objects>
+            <point key="canvasLocation" x="5802.3999999999996" y="113.79310344827587"/>
         </scene>
         <!--Six One View Controller-->
         <scene sceneID="b7C-IZ-9rU">
@@ -533,7 +649,12 @@
     </scenes>
     <resources>
         <image name="0.gif" width="800" height="800"/>
+        <image name="MarioHead" width="120" height="101"/>
+        <image name="Mazinger_Z-1" width="239" height="227"/>
+        <image name="R2D2-icon" width="512" height="512"/>
+        <image name="Y3gTzi" width="640" height="1136"/>
         <image name="book" width="400" height="400"/>
+        <image name="icons8-expand_arrow_filled" width="25" height="25"/>
         <image name="mazinger_z" width="1760" height="1004"/>
         <image name="monkey" width="640" height="413"/>
         <image name="night" width="2048" height="2048"/>
